@@ -68,6 +68,8 @@ Included
 - `host_status` receipt emission now uses staged atomic finalize (`host_status_*.json.stage` -> `host_status_*.json`).
 - `host_update` receipt emission now uses staged atomic finalize (`host_update_receipt.json.stage` -> `host_update_receipt.json`).
 - Added host runtime test assertions that no host receipt `.stage` files remain after finalize.
+- Shared README receipt writer now uses staged atomic finalize (`weftend/README.txt.stage` -> `weftend/README.txt`).
+- Added runtime coverage for deterministic README build/write and no leftover README `.stage` residue.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
 - Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
